--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,16 @@
   <title>Kollaboratív Rajzoló</title>
   <style>
     canvas { border: 1px solid black; }
+    #controls { margin-bottom: 10px; }
   </style>
 </head>
 <body>
+  <div id="controls">
+    <input type="color" id="colorPicker" value="#000000">
+    <input type="range" id="lineWidth" min="1" max="20" value="2">
+  </div>
   <canvas id="drawingCanvas"></canvas>
-  <script src="/socket.io/socket.io.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.5/socket.io.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
