--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <input type="color" id="colorPicker" value="#000000">
     <input type="range" id="lineWidth" min="1" max="20" value="2">
   </div>
+  <button id="clearButton">Törlés</button>
   <canvas id="drawingCanvas"></canvas>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.5/socket.io.js"></script>
   <script src="app.js"></script>
